# youtube_asr

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
logs/logs/affable_caiman/version_0/: events.out.tfevents.1728614061.a510b09d5742.12041.0
logs/logs/fabulous_bear/version_0/: events.out.tfevents.1728651570.a510b09d5742.6005.0
logs/logs/flat_wrasse/version_0/: events.out.tfevents.1728500148.551fa8ce8f87.16195.0
logs/logs/fluffy_poodle/version_0/: events.out.tfevents.1728610704.a510b09d5742.6351.0
logs/logs/friendly_mastiff/version_0/: events.out.tfevents.1728595734.a510b09d5742.3776.0
logs/logs/gainful_vulture/version_0/: events.out.tfevents.1728512246.551fa8ce8f87.38524.0  events.out.tfevents.1728512380.551fa8ce8f87.38524.1
logs/logs/grumpy_squirrel/version_0/: events.out.tfevents.1728504976.551fa8ce8f87.17360.0
logs/logs/large_caracara/version_0/: events.out.tfevents.1728555121.551fa8ce8f87.116899.0
logs/logs/pumpkin_heron/version_0/: events.out.tfevents.1728603513.a510b09d5742.5086.0
logs/logs/ruby_pronghorn/version_0/: events.out.tfevents.1728635001.a510b09d5742.118498.0
logs/logs/successful_ammonite/version_0/: events.out.tfevents.1728571770.46216c6ac2d2.10071.0
logs/logs/vague_angelfish/version_0/: events.out.tfevents.1728546749.551fa8ce8f87.97366.0
notebooks/: cnn_train_testing.nb.py  data_analysis.nb.py  feature_engineering.nb.py  sklearn_baseline.nb.py  training.nb.py
report/: report.tex
src/youtube_asr/: dataset.py  metrics.py  model.py  preprocess.py  train.py  utils.py
(+1 files in other folders)
